--- a/layout/layout.html
+++ b/layout/layout.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>5. Layout &mdash; The Hitchhiker&#39;s Guide to PlantUML  documentation</title>
+  <title>6. Layout &mdash; The Hitchhiker&#39;s Guide to PlantUML  documentation</title>
   
 
   
@@ -40,7 +40,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="1. PlantUML Stdlib Overview" href="../Stdlib/StdLibOverview.html" />
-    <link rel="prev" title="4. PassSpriteAsParameter" href="../PassSpriteAsParameter/PassSpriteAsParameter.html" /> 
+    <link rel="prev" title="5. Colors" href="../color/color.html" /> 
 </head>
 
 <body class="wy-body-for-nav">
@@ -107,11 +107,12 @@
 <li class="toctree-l1"><a class="reference internal" href="../scale/scale.html">2. Scaling Sprites</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../procedures/procedures.html">3. Procedures</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../PassSpriteAsParameter/PassSpriteAsParameter.html">4. PassSpriteAsParameter</a></li>
-<li class="toctree-l1 current"><a class="current reference internal" href="#">5. Layout</a><ul>
-<li class="toctree-l2"><a class="reference internal" href="#arrows">5.1. arrows</a></li>
-<li class="toctree-l2"><a class="reference internal" href="#nodesep-and-ranksep">5.2. nodesep and ranksep</a></li>
-<li class="toctree-l2"><a class="reference internal" href="#id2">5.3. together</a></li>
-<li class="toctree-l2"><a class="reference internal" href="#linetype">5.4. linetype</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../color/color.html">5. Colors</a></li>
+<li class="toctree-l1 current"><a class="current reference internal" href="#">6. Layout</a><ul>
+<li class="toctree-l2"><a class="reference internal" href="#arrows">6.1. arrows</a></li>
+<li class="toctree-l2"><a class="reference internal" href="#nodesep-and-ranksep">6.2. nodesep and ranksep</a></li>
+<li class="toctree-l2"><a class="reference internal" href="#id2">6.3. together</a></li>
+<li class="toctree-l2"><a class="reference internal" href="#linetype">6.4. linetype</a></li>
 </ul>
 </li>
 </ul>
@@ -184,7 +185,7 @@
     
       <li><a href="../index.html">Docs</a> &raquo;</li>
         
-      <li>5. Layout</li>
+      <li>6. Layout</li>
     
     
       <li class="wy-breadcrumbs-aside">
@@ -204,7 +205,7 @@
            <div itemprop="articleBody">
             
   <div class="section" id="layout">
-<h1>5. Layout<a class="headerlink" href="#layout" title="Permalink to this headline">¶</a></h1>
+<h1>6. Layout<a class="headerlink" href="#layout" title="Permalink to this headline">¶</a></h1>
 <div class="admonition tip">
 <p class="admonition-title">Tip</p>
 <p><em>It’s true that when diagram is big (or very big) manual placement could be useful. However and unfortunatly, this is againt PlantUML concept</em>
@@ -221,7 +222,7 @@
 <p>allow_mixing
 skinparam pathHoverColor green</p>
 <div class="section" id="arrows">
-<h2>5.1. arrows<a class="headerlink" href="#arrows" title="Permalink to this headline">¶</a></h2>
+<h2>6.1. arrows<a class="headerlink" href="#arrows" title="Permalink to this headline">¶</a></h2>
 <p>hidden
 hide unlinked</p>
 <p>dashed arrows and boxes</p>
@@ -246,7 +247,7 @@ foo -[dotted]-&gt; bar3</p>
 <a class="reference external" href="https://dzone.com/articles/plantuml-pleasantness-layout-elements-with-hidden">https://dzone.com/articles/plantuml-pleasantness-layout-elements-with-hidden</a></p>
 </div>
 <div class="section" id="nodesep-and-ranksep">
-<h2>5.2. nodesep and ranksep<a class="headerlink" href="#nodesep-and-ranksep" title="Permalink to this headline">¶</a></h2>
+<h2>6.2. nodesep and ranksep<a class="headerlink" href="#nodesep-and-ranksep" title="Permalink to this headline">¶</a></h2>
 <div class="figure align-center" id="id3">
 <p class="plantuml">
 <img src="../_images/plantuml-30081b3387801cc5910f5331330ca07bca1462ae.png" alt="&#64;startuml
@@ -276,10 +277,10 @@ Foo3 *-- Foo1
 </td></tr></table></div>
 </div>
 <div class="section" id="id2">
-<h2>5.3. together<a class="headerlink" href="#id2" title="Permalink to this headline">¶</a></h2>
+<h2>6.3. together<a class="headerlink" href="#id2" title="Permalink to this headline">¶</a></h2>
 </div>
 <div class="section" id="linetype">
-<h2>5.4. linetype<a class="headerlink" href="#linetype" title="Permalink to this headline">¶</a></h2>
+<h2>6.4. linetype<a class="headerlink" href="#linetype" title="Permalink to this headline">¶</a></h2>
 <p>skinparam linetype polyline
 skinparam linetype ortho</p>
 <p>ortho line style. labels removed <a class="reference external" href="https://forum.plantuml.net/1608/is-it-possible-to-only-use-straight-lines-in-a-class-diagram">https://forum.plantuml.net/1608/is-it-possible-to-only-use-straight-lines-in-a-class-diagram</a></p>
@@ -297,7 +298,7 @@ skinparam linetype ortho</p>
         <a href="../Stdlib/StdLibOverview.html" class="btn btn-neutral float-right" title="1. PlantUML Stdlib Overview" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
       
       
-        <a href="../PassSpriteAsParameter/PassSpriteAsParameter.html" class="btn btn-neutral float-left" title="4. PassSpriteAsParameter" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
+        <a href="../color/color.html" class="btn btn-neutral float-left" title="5. Colors" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
       
     </div>
   
