--- a/layout/layout.html
+++ b/layout/layout.html
@@ -212,10 +212,10 @@
 <h1>6. Layout<a class="headerlink" href="#layout" title="Permalink to this headline">¶</a></h1>
 <div class="admonition tip">
 <p class="admonition-title">Tip</p>
-<p><em>It’s true that when diagram is big (or very big) manual placement could be useful. However and unfortunatly, this is against PlantUML concept</em>
+<p><em>It’s true that when diagram is big (or very big) manual placement could be useful. However and unfortunately, this is against PlantUML concept</em>
 <a class="reference external" href="https://forum.plantuml.net/977">https://forum.plantuml.net/977</a></p>
 <p>Wrangling diagram elements to an exact position or layout is not what PlantUML is for.</p>
-<p>However, there are <strong>some layout tweak mechanims that should be used sparingly</strong>. These are described here.</p>
+<p>However, there are <strong>some layout tweak mechanisms that should be used sparingly</strong>. These are described here.</p>
 </div>
 <div class="section" id="arrows-for-layout">
 <h2>6.1. Arrows for Layout<a class="headerlink" href="#arrows-for-layout" title="Permalink to this headline">¶</a></h2>
