--- a/layout/layout.html
+++ b/layout/layout.html
@@ -39,7 +39,7 @@
   <link rel="stylesheet" href="../_static/theme_overrides.css" type="text/css" />
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="1. PlantUML Stdlib Overview" href="../Stdlib/StdLibOverview.html" />
+    <link rel="next" title="7. Tricked Out Diagrams (aka Diagram Annotation)" href="../diagramAnnotation/diagramAnnotation.html" />
     <link rel="prev" title="5. Colors" href="../color/color.html" /> 
 </head>
 
@@ -119,6 +119,7 @@
 <li class="toctree-l2"><a class="reference internal" href="#linetype-polyline-ortho">6.8. linetype polyline ortho</a></li>
 </ul>
 </li>
+<li class="toctree-l1"><a class="reference internal" href="../diagramAnnotation/diagramAnnotation.html">7. Tricked Out Diagrams (aka Diagram Annotation)</a></li>
 </ul>
 <p class="caption"><span class="caption-text">Understanding Standard Library</span></p>
 <ul>
@@ -771,7 +772,7 @@ E ---------&gt; C
   
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
       
-        <a href="../Stdlib/StdLibOverview.html" class="btn btn-neutral float-right" title="1. PlantUML Stdlib Overview" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
+        <a href="../diagramAnnotation/diagramAnnotation.html" class="btn btn-neutral float-right" title="7. Tricked Out Diagrams (aka Diagram Annotation)" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
       
       
         <a href="../color/color.html" class="btn btn-neutral float-left" title="5. Colors" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
