--- a/layout/layout.html
+++ b/layout/layout.html
@@ -258,7 +258,10 @@
 <tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">--[hidden]&gt;</span></code></p></td>
 <td><p>hidden</p></td>
 </tr>
-<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">---&gt;</span></code> or <code class="docutils literal notranslate"><span class="pre">----&gt;</span></code> or <code class="docutils literal notranslate"><span class="pre">-----&gt;</span></code> …</p></td>
+<tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">-[hidden]d-&gt;</span></code></p></td>
+<td><p>hidden with direction e.g. down</p></td>
+</tr>
+<tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">---&gt;</span></code> or <code class="docutils literal notranslate"><span class="pre">----&gt;</span></code> or <code class="docutils literal notranslate"><span class="pre">-----&gt;</span></code> …</p></td>
 <td><p>varying arrow lengths; add dashes to make line longer</p></td>
 </tr>
 </tbody>
