--- a/layout/layout.html
+++ b/layout/layout.html
@@ -472,7 +472,7 @@ Arrows --[hidden]&gt; E
 <h2>6.6. nodesep and ranksep<a class="headerlink" href="#nodesep-and-ranksep" title="Permalink to this headline">¶</a></h2>
 <div class="figure align-center">
 <p class="plantuml">
-<img src="../_images/plantuml-a0809ee2e2a1b1146b1061c70eef780728d7a6db.png" alt="&#64;startuml
+<img src="../_images/plantuml-24c4181ee0e0c495c913c5703a71e6503af73bc0.png" alt="&#64;startuml
 
 'skinparam nodesep 10
 'skinparam ranksep 20
@@ -487,7 +487,7 @@ rectangle F
 
 Arrows -[bold]-&gt; A 
 Arrows -[#pink,dashed,thickness=10]-&gt; B
-Arrows -[#DDFF00,dotted,bold]-&gt; C
+Arrows -[#4567ff,dotted]-&gt; C
 Arrows --&gt; D
 E ---&gt; C
 
@@ -528,7 +528,7 @@ E ---&gt; C
 
 <span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="n">bold</span><span class="p">]</span><span class="o">-&gt;</span> <span class="n">A</span> 
 <span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#pink,dashed,thickness=10]-&gt; B</span>
-<span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#DDFF00,dotted,bold]-&gt; C</span>
+<span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#4567ff,dotted]-&gt; C</span>
 <span class="n">Arrows</span> <span class="o">--&gt;</span> <span class="n">D</span>
 <span class="n">E</span> <span class="o">---&gt;</span> <span class="n">C</span>
 
@@ -537,7 +537,7 @@ E ---&gt; C
 </td></tr></table></div>
 <div class="figure align-center">
 <p class="plantuml">
-<img src="../_images/plantuml-36b671ac1a2360e897d54b8f09a293dbb3c08920.png" alt="&#64;startuml
+<img src="../_images/plantuml-b11497574b50086a1f14e9551b0a01c1701d72d9.png" alt="&#64;startuml
 
 skinparam nodesep 5
 'skinparam ranksep 20
@@ -552,7 +552,7 @@ rectangle F
 
 Arrows -[bold]-&gt; A 
 Arrows -[#pink,dashed,thickness=10]-&gt; B
-Arrows -[#DDFF00,dotted,bold]-&gt; C
+Arrows -[#4567ff,dotted]-&gt; C
 Arrows --&gt; D
 E ---&gt; C
 
@@ -593,7 +593,7 @@ E ---&gt; C
 
 <span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="n">bold</span><span class="p">]</span><span class="o">-&gt;</span> <span class="n">A</span> 
 <span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#pink,dashed,thickness=10]-&gt; B</span>
-<span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#DDFF00,dotted,bold]-&gt; C</span>
+<span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#4567ff,dotted]-&gt; C</span>
 <span class="n">Arrows</span> <span class="o">--&gt;</span> <span class="n">D</span>
 <span class="n">E</span> <span class="o">---&gt;</span> <span class="n">C</span>
 
@@ -602,7 +602,7 @@ E ---&gt; C
 </td></tr></table></div>
 <div class="figure align-center">
 <p class="plantuml">
-<img src="../_images/plantuml-128426d70ad65b24d1d510f2f21ee1d25c51cd3b.png" alt="&#64;startuml
+<img src="../_images/plantuml-ea2480c6c4f0473032e04684113a113ddc755f80.png" alt="&#64;startuml
 
 'left to right direction
 'top to bottom direction
@@ -620,7 +620,7 @@ rectangle F
 
 Arrows -[bold]-&gt; A 
 Arrows -[#pink,dashed,thickness=10]-&gt; B
-Arrows -[#DDFF00,dotted,bold]-&gt; C
+Arrows -[#4567ff,dotted]-&gt; C
 Arrows --&gt; D
 
 'long arrow for no good reason 
@@ -671,7 +671,7 @@ E ---&gt; C
 
 <span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="n">bold</span><span class="p">]</span><span class="o">-&gt;</span> <span class="n">A</span> 
 <span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#pink,dashed,thickness=10]-&gt; B</span>
-<span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#DDFF00,dotted,bold]-&gt; C</span>
+<span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#4567ff,dotted]-&gt; C</span>
 <span class="n">Arrows</span> <span class="o">--&gt;</span> <span class="n">D</span>
 
 <span class="s1">&#39;long arrow for no good reason </span>
@@ -687,7 +687,7 @@ E ---&gt; C
 <p>E-C is specified as a very long arrow</p>
 <div class="figure align-center">
 <p class="plantuml">
-<img src="../_images/plantuml-6507d6913a41dce087a0d1a2d6321a07c40cc9f6.png" alt="&#64;startuml
+<img src="../_images/plantuml-06436b83d5a6e8ea43ac578124b9cfc6a7cd225d.png" alt="&#64;startuml
 
 rectangle Arrows
 rectangle A
@@ -701,7 +701,7 @@ rectangle F
 
 
 Arrows -[bold]-&gt; A 
-Arrows -[#DDFF00,dotted,bold]-&gt; C
+Arrows -[#4567ff,dotted]-&gt; C
 Arrows -[#pink,dashed,thickness=10]-&gt; B
 Arrows --&gt; D
 E ---------&gt; C
@@ -742,7 +742,7 @@ E ---------&gt; C
 
 
 <span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="n">bold</span><span class="p">]</span><span class="o">-&gt;</span> <span class="n">A</span> 
-<span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#DDFF00,dotted,bold]-&gt; C</span>
+<span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#4567ff,dotted]-&gt; C</span>
 <span class="n">Arrows</span> <span class="o">-</span><span class="p">[</span><span class="c1">#pink,dashed,thickness=10]-&gt; B</span>
 <span class="n">Arrows</span> <span class="o">--&gt;</span> <span class="n">D</span>
 <span class="hll"><span class="n">E</span> <span class="o">---------&gt;</span> <span class="n">C</span>
